--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <img src="./image/categories.72379ee.svg" alt="" /> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
